--- a/LPi.tex
+++ b/LPi.tex
@@ -5,6 +5,7 @@
 \usepackage{type1cm}
 \usepackage{graphicx}
 \graphicspath{ {images/} }
+\usepackage{subfig}
 \usepackage[unicode]{hyperref} %Tu dong tao bookmark
 \usepackage{indentfirst} %Thut vao dau dong o tat ca cac doan
 \usepackage{listings} %Dinh dang code
@@ -34,5 +35,9 @@
 \begin{document}
 %\input{title-page.tex}
 %\input{install-pi/Install-Pi-OS.tex}
-\input{network/IP-static-wifi.tex}
+\tableofcontents
+\input{remote/remote-pi.tex}
+\input{network/network-pi.tex}
+\input{login/login.tex}
+\input{run-script-python/run-script-python.tex}
 \end{document}
