--- a/run-script-python/run-script-python.tex
+++ b/run-script-python/run-script-python.tex
@@ -19,7 +19,7 @@ $ python file.py
 Ở phần~\ref{run-python}, ta phải thực hiện đánh lệnh thì file python mới được gọi, với nhiều ứng dụng tự động, cần tự động chạy chương trình python sau khi reboot. Ta có một số cách sau:
 
 Ví dụ, ta cần chạy file python có tên là \verb|myfile.py|.
-\subsection{Sử dụng crontab}
+\subsection{Sử dụng cron}
 Tham khảo tại: \verb|https://www.youtube.com/watch?v=8iU9TnYFOV0|\\
 Thực hiện theo các bước sau:
 \begin{itemize}
