--- a/run-script-python/run-script-python.tex
+++ b/run-script-python/run-script-python.tex
@@ -124,7 +124,7 @@ $ sh launcher.sh
 $ cd ~
 $ mkdir logs
 \end{lstlisting}
-\item Mở \verb|crom|:
+\item Mở \verb|cron|:
 \begin{lstlisting}[language=bash]
 $ sudo crontab -e
 \end{lstlisting}
